# AMMP-PDEVS

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  main-ammp.cpp  main.cpp  makefile  model-engine.hpp  msb201165-sup-0003.json  requirements.txt  test.xml  test_1.xml  test_2.xml
atomic-models/: biomass.hpp  cdboost-reaction.hpp  cdboost-space.hpp  controler.hpp  filter.hpp  reaction.hpp  space.hpp
atomics/: cdboost-reaction.hpp  cdboost-space.hpp  reaction.hpp  router.hpp  space.hpp
data/: Test_1.ipynb  extract_information.py
data-structures/: britime.hpp  message.hpp  message_types.hpp  randomNumbers.hpp  reaction_input.hpp  types.cpp  types.hpp  unit.cpp  unit.hpp  unit_definition.cpp  unit_definition.hpp
data/.ipynb_checkpoints/: Test_1-checkpoint.ipynb
data/utilities/: extract_information.py
doc/: pmgbp
include/atomics/: filter.hpp  reaction.hpp  space.hpp
include/lib/: Logger.hpp
include/pmgbp/atomics/: enzyme.hpp  reaction.hpp  router.hpp  space.hpp
include/pmgbp/lib/: TupleOperators.hpp
include/pmgbp/model_generator/: enzyme_group.hpp  enzyme_set.hpp  reaction_group.hpp  reaction_set.hpp
include/pmgbp/structures/: space.hpp  types.hpp
include/structures/: messages.hpp
libs/: Logger.hpp  TaskScheduler.hpp  TupleOperators.hpp  message_types.hpp  tuple_operators.hpp  types.cpp  types.hpp  unit_definition.cpp
model-specification/: svg2png-crop.sh  without-filter-coupled-model.graphml
model-specification/First Aprouch/: primer-aprouch.tex
model-specification/second Aprouch/: DOM.graphml  atomic-filter.graphml  atomic-reaction.graphml  atomic-space.graphml  coupled-model.graphml  filter.graphml  model_classes.graphml  reaction.graphml  second-aprouch.aux  second-aprouch.tex
model-specification/third Aprouch/: DOM.graphml  atomic-filter.graphml  atomic-reaction.graphml  controler.graphml  coupled-model.graphml  model_classes.graphml  second-aprouch.aux
model_generator/: DynamicModelCodeGenerator.py  ModelCodeGenerator.py  ModelGenerator.py  README.md  SBMLParser.py  XMLParametersGenerator.py  constants.py  generate_model.py  modelGenerator.py  model_generator.hpp  parser.py  requirements.txt  setup.py
model_generator/PMGBP/: DynamicModelCodeGenerator.py  ModelCodeGenerator.py  ModelCodeWriter.py  ModelGenerator.py  SBMLParser.py  XMLParametersGenerator.py  XMLParametersWriter.py  __init__.py  constants.py
model_generator/PMGBP/templates/: atomic.tpl.hpp  atomic_model_definition.tpl.hpp  coupled.tpl.hpp  dynamic_atomic.tpl.hpp  dynamic_defined_atomic.tpl.hpp  dynamic_reaction_set.tpl.hpp  enzyme_set.tpl.hpp  space_atomic_model_definition.tpl.hpp
model_generator/PMGBP/tests/: test.py
model_generator/pickles/: enzymes.pickle  reactions.pickle
model_generator/scripts/: pmgbp_generate_model
model_generator/static_code/: reaction_group_ports.cpp
model_generator/templates/: atomic.tpl.hpp  coupled.tpl.hpp  dynamic_atomic.tpl.hpp  dynamic_reaction_group.tpl.cpp  ports.tpl.hpp
parser/: parser.cpp  parser.hpp  parserIterator.hpp
src/pmgbp/model_generator/: reaction_group.cpp
src/pmgbp/structures/: space.cpp  (+1 more)
src/structures/: space.cpp  types.cpp
structures/: messages.hpp  reaction.hpp  router.hpp  space.cpp  space.hpp  types.cpp  types.hpp
test-files/: test_1.xml  test_3.xml  thesis_theoretical_model.xml
test/cases/: test_1.xml  test_1_single_enzyme.xml  test_3.xml  test_4.xml
test/notebooks/: single_enzyme.ipynb
test/runtime_test/: SBMLTestGenerator.py  generate_sbml.py  run_test.sh
test/test_single_enzyme/: sbml.xml
test/utilities/: compile_tests.sh
testing/: testing-filters.cpp  testing-reactions-performance.cpp  testing-reactions.cpp  testing-space.cpp
testing/diagram-test_2/: diagram-new.txt  diagram-old.txt  diagrama.graphml
testing/e-coli/: diagram-ecoli.txt
tests/SBMLparser/: test_SBMLParser.py
tests/utilities/: SBMLGenerator.py  SBMLTestGenerator.py  compile_tests.sh  generate_sbml.py  test.xml
tinyXML/.svn/: all-wcprops  entries
vendors/: britime.hpp  fdtime.h
(+16 files in other folders)
